feat: phpcs, phpstan and docker

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-composer.lock
 .phpunit.result.cache
 symfony.lock
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
