--- a/composer.json
+++ b/composer.json
@@ -39,17 +39,19 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "liip/test-fixtures-bundle": "^1.0.0",
-        "symfony/browser-kit": "^4.4",
-        "symfony/css-selector": "^4.4",
-        "symfony/debug-bundle": "^4.4",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^5.2",
-        "symfony/stopwatch": "^4.4",
-        "symfony/var-dumper": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4",
-        "theofidry/alice-data-fixtures": "^1.4"
+      "doctrine/doctrine-fixtures-bundle": "^3.4",
+      "liip/test-fixtures-bundle": "^1.0.0",
+      "phpstan/phpstan": "^0.12.82",
+      "squizlabs/php_codesniffer": "^3.5",
+      "symfony/browser-kit": "^4.4",
+      "symfony/css-selector": "^4.4",
+      "symfony/debug-bundle": "^4.4",
+      "symfony/maker-bundle": "^1.0",
+      "symfony/phpunit-bridge": "^5.2",
+      "symfony/stopwatch": "^4.4",
+      "symfony/var-dumper": "^4.4",
+      "symfony/web-profiler-bundle": "^4.4",
+      "theofidry/alice-data-fixtures": "^1.4"
     },
     "config": {
         "preferred-install": {
