Testcase on CI/CD

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,24 +32,25 @@ phpstan:
   allow_failure: false
 
 phpunit:
-  #  image: php:7.4-apache
+  image: php:7.4-apache
   stage: UnitTests
-  #  services:
-  #    - name: mysql:5.7
-  #      alias: mysql
-  #  variables:
-  #    MYSQL_ROOT_PASSWORD: pass_test
-  #    MYSQL_DATABASE: myapptest
-  #    MYSQL_USER: myapptest
-  #    MYSQL_PASSWORD: myapptest
-  #    DATABASE_URL: 'mysql://myapptest:myapptest@mysql:3306/myapptest'
-  #  before_script:
-  #    - apt-get update && apt-get install -y git libzip-dev
-  #    - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
-  #    - docker-php-ext-install mysqli pdo pdo_mysql zip
-  #    - php bin/console doctrine:database:drop --force --env=test
-  #    - php bin/console doctrine:database:create --env=test
-  #    - php bin/console doctrine:migration:migrate --env=test --no-interaction
+#  services:
+#    - name: mysql:5.7
+#      alias: mysql
+#  variables:
+#    MYSQL_ROOT_PASSWORD: pass_test
+#    MYSQL_DATABASE: myapptest
+#    MYSQL_USER: myapptest
+#    MYSQL_PASSWORD: myapptest
+#    DATABASE_URL: 'mysql://myapptest:myapptest@mysql:3306/myapptest'
+  before_script:
+    - apt-get update && apt-get install -y git libzip-dev
+    - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
+    - docker-php-ext-install pdo pdo_sqlite zip
+#    - docker-php-ext-install mysqli pdo pdo_mysql zip
+    - php bin/console doctrine:database:drop --force --env=test
+    - php bin/console doctrine:database:create --env=test
+    - php bin/console doctrine:migration:migrate --env=test --no-interaction
   script:
     - php bin/phpunit
   allow_failure: false
