--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,9 +44,9 @@ phpunit:
 #    MYSQL_PASSWORD: myapptest
 #    DATABASE_URL: 'mysql://myapptest:myapptest@mysql:3306/myapptest'
   before_script:
-    - apt-get update && apt-get install -y git libzip-dev
+    - apt-get update && apt-get install -y git libzip-dev libsqlite3-dev
     - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
-    - docker-php-ext-install pdo libsqlite3-dev sqlite-devel zip
+    - docker-php-ext-install pdo sqlite-devel zip
 #    - docker-php-ext-install mysqli pdo pdo_mysql zip
     - php bin/console doctrine:database:drop --force --env=test
     - php bin/console doctrine:database:create --env=test
