Testcase on CI/CD

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ phpunit:
 #    MYSQL_PASSWORD: myapptest
 #    DATABASE_URL: 'mysql://myapptest:myapptest@mysql:3306/myapptest'
   before_script:
-    - apt-get update && apt-get install -y git libsqlite3-dev libsqlite3-0
+    - apt-get update && apt-get install -y git libsqlite3-dev libsqlite3-0 libzip-dev
     - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
     - docker-php-ext-install pdo pdo_sqlite zip
 #    - docker-php-ext-install mysqli pdo pdo_mysql zip
