--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,5 +52,5 @@ phpunit:
     - php bin/console doctrine:database:create --env=test
     - php bin/console doctrine:migration:migrate --env=test --no-interaction
   script:
-    - php bin/phpunit
+    - php bin/phpunit --coverage-text
   allow_failure: false
