--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,19 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-      "php": ">=7.4",
-      "ext-ctype": "*",
-      "ext-iconv": "*",
-      "cocur/slugify": "^4.0",
-      "composer/package-versions-deprecated": "1.11.99.1",
-      "doctrine/annotations": "^1.0",
-      "doctrine/doctrine-bundle": "^2.2",
-      "doctrine/doctrine-migrations-bundle": "^3.0",
-      "doctrine/orm": "^2.8",
-      "phpdocumentor/reflection-docblock": "^5.2",
-      "sensio/framework-extra-bundle": "^5.1",
+        "php": ">=7.4",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "cocur/slugify": "^4.0",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
+        "fakerphp/faker": "^1.13",
+        "knplabs/knp-paginator-bundle": "^5.4",
+        "phpdocumentor/reflection-docblock": "^5.2",
+        "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
