feat: add options of properties

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
 image: jakzal/phpqa:php7.4
 
+cache:
+  key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+  paths:
+    - vendor/
+
 before_script:
   # Composer
   - composer install
-
-cache:
-  paths:
-    - vendor/
 
 stages:
   - SecurityChecker
