--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,5 +23,5 @@ security:
             # http_basic: true
 
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+#        - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
