--- a/tests/fixtures/properties.yaml
+++ b/tests/fixtures/properties.yaml
@@ -1,5 +1,5 @@
 App\Entity\Property:
-  property{1..5}:
+  property{1..3}:
     title: <words(3, true)>
     description: <sentence(3, true)>
     surface: <numberBetween(20, 350)>
@@ -14,6 +14,35 @@ App\Entity\Property:
     created_at: <datetime()>
     sold: false
 
+  property4:
+    title: <words(3, true)>
+    description: <sentence(3, true)>
+    surface: 50
+    rooms: <numberBetween(2, 10)>
+    bedrooms: <numberBetween(1, 9)>
+    floor: <numberBetween(0, 15)>
+    price: 50000
+    heat: <numberBetween(0, 1)>
+    city: <city()>
+    address: <address()>
+    postal_code: <postcode()>
+    created_at: <datetime()>
+    sold: false
+
+  property5:
+    title: <words(3, true)>
+    description: <sentence(3, true)>
+    surface: 60
+    rooms: <numberBetween(2, 10)>
+    bedrooms: <numberBetween(1, 9)>
+    floor: <numberBetween(0, 15)>
+    price: 45000
+    heat: <numberBetween(0, 1)>
+    city: <city()>
+    address: <address()>
+    postal_code: <postcode()>
+    created_at: <datetime()>
+    sold: false
 
   property{6..9}:
     title: <words(3, true)>
@@ -29,3 +58,4 @@ App\Entity\Property:
     postal_code: <postcode()>
     created_at: <datetime()>
     sold: true
+
