--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,6 +28,7 @@
             <directory suffix=".php">src</directory>
             <exclude>
                 <file>src/Kernel.php</file>
+                <directory>src/DataFixtures</directory>
             </exclude>
         </whitelist>
     </filter>
