feat: cache image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,3 +62,5 @@ phpunit:
   script:
     - php bin/phpunit --configuration phpunit.xml.dist --coverage-text --colors=never
   allow_failure: false
+#  only:
+#    - master
