--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ symfony.lock
 /.phpcs-cache
 /phpcs.xml
 ###< squizlabs/php_codesniffer ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
